--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,117 @@
 <app-header></app-header>
-<div class="container" style="margin-top: 60px">
-  <div class="row">
-    <div class="col-12 col-lg-5 mt-2">
-      <!-- Upcoming / Next launch in data -->
-      <app-img-mask-with-text [imgSrc]="dummyLaunchImg">
-        <h5 class="h5 orange-underline highlight-font">Upcoming launch</h5>
-        <h6 class="fw-bold">Falcon 9 Block 5 | Starlink Group 4-20 & Varuna</h6>
-        <h6>
-          <i class="fas fa-calendar-day"></i> &nbsp; Sep 01 2022, 19:00:00
-        </h6>
-      </app-img-mask-with-text>
-    </div>
 
-    <div class="col-12 col-lg-7 mt-2">
-      <!-- Today in history -->
-      <div class="row g-1">
-        <h5 class="h5 highlight-font">Today in history</h5>
-        <div class="col-6">
-          <div class="card bg-dark">
-            <img
-              [src]="dummyLaunchImg"
-              class="card-img-top"
-              alt="Fissure in Sandstone"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
+<div class="container" style="margin-top: 65px">
+  <div class="row g-3">
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-12">
+          <h6 class="float-start">
+            <i class="far fa-dot-circle"></i> &nbsp;Upcoming Launch
+          </h6>
+          <a href="#" class="float-end"
+            ><i class="fas fa-chevron-circle-right"></i
+          ></a>
+        </div>
+      </div>
+      <div class="bg-image rounded-6 postion-relative">
+        <img
+          [src]="dummyLaunchImg"
+          class="w-100"
+          style="object-fit: cover; height: 50vh"
+          alt="Alternative text"
+        />
+        <!-- Mask -->
+        <div
+          class="mask"
+          style="
+            background: linear-gradient(
+              to bottom,
+              hsla(0, 0%, 0%, 0) 50%,
+              hsla(0, 0%, 0%, 0.5)
+            );
+          "
+        >
+          <div
+            class="
+              bottom-0
+              text-white
+              me-3
+              d-flex
+              align-items-end
+              h-100
+              justify-content-end
+            "
+          >
+            <div class="text-end">
+              <p class="badge bg-danger">To Be Confirmed (TBC)</p>
+              <p class="h6 fw-bold">
+                Falcon 9 Block 5 | Starlink Group 4-2 & BlueWalker 3
               </p>
-              <a href="#!" class="btn btn-primary">Button</a>
+              <p>
+                <i class="fas fa-calendar-day"></i> &nbsp; Sep 11 2022, 06:40:00
+              </p>
             </div>
           </div>
         </div>
-        <div class="col-6">          
-        </div>
-      </div>
-      <div class="row">
-        <div class="col"></div>
       </div>
     </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-12">
+          <h6 class="float-start"><i class="fas fa-image"></i> &nbsp;Picture of the day</h6>
+          <a href="#" class="float-end"
+            ><i class="fas fa-chevron-circle-right"></i
+          ></a>
+        </div>
+      </div>
+      <div class="bg-image rounded-6">
+        <img
+          [src]="picofday"
+          class="w-100"
+          style="object-fit: cover; height: 50vh"
+          alt="Alternative text"
+        />
+        <!-- Mask -->
+        <div
+          class="mask"
+          style="
+            background: linear-gradient(
+              to bottom,
+              hsla(0, 0%, 0%, 0) 50%,
+              hsla(0, 0%, 0%, 0.5)
+            );
+          "
+        >
+          <div
+            class="
+              bottom-0
+              d-flex
+              me-3
+              text-white
+              align-items-end
+              h-100
+              justify-content-end
+            "
+          >
+            <div>
+              <h6 class="fw-bold">A Long Snaking Filament on the Sun</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row g-2 mt-1">
+    <div class="col-12 col-md-4">
+      <div class="card bg-gray-custom ">
+        <div class="card-body shadow-5 d-flex flex-row">
+          <img src="/assets/images/mars.png" style="height: 20vh;"/>
+          <span class="text-center  w-100">
+           <h4>Explore images taken by</h4>
+           <h3>MARS ROVER</h3>
+          </span>
+        </div>
+      </div>     
+    </div>    
   </div>
 </div>
