--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark shadow-5-strong" style="background-color: #424242;">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark shadow-5">
   <!-- Container wrapper -->
-  <div class="container-fluid">
+  <div class="container-fluid ">
     <!-- Navbar brand -->
-    <a class="navbar-brand d-none d-lg-block website-font-name" href="#">ALL ABOUT SPACE</a>
-    <a class="navbar-brand d-lg-none website-font-name" href="#">AAS</a>
+    <a class="navbar-brand d-none d-lg-block website-font-name blue-color-600" href="#">ALL ABOUT SPACE</a>
+    <a class="navbar-brand d-lg-none website-font-name blue-color-600" href="#">AAS</a>
 
     <!-- Toggle button -->
     <button
