Initial UI wireframe in progress.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,10 @@ a {
   background-color: #363535;
 }
 
+.txt-marsColor-custom{
+  color: #c1440e;
+}
+
 // .blue-color-600 {
 //  color: #1E88E5 !important;
 // }
