--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,15 +32,7 @@
           "
         >
           <div
-            class="
-              bottom-0
-              text-white
-              me-3
-              d-flex
-              align-items-end
-              h-100
-              justify-content-end
-            "
+            class="bottom-0 text-white me-3 d-flex align-items-end h-100 justify-content-end"
           >
             <div class="text-end">
               <p class="badge bg-danger">To Be Confirmed (TBC)</p>
@@ -58,7 +50,9 @@
     <div class="col-md-6">
       <div class="row">
         <div class="col-12">
-          <h6 class="float-start"><i class="fas fa-image"></i> &nbsp;Picture of the day</h6>
+          <h6 class="float-start">
+            <i class="fas fa-image"></i> &nbsp;Picture of the day
+          </h6>
           <a href="#" class="float-end"
             ><i class="fas fa-chevron-circle-right"></i
           ></a>
@@ -83,15 +77,7 @@
           "
         >
           <div
-            class="
-              bottom-0
-              d-flex
-              me-3
-              text-white
-              align-items-end
-              h-100
-              justify-content-end
-            "
+            class="bottom-0 d-flex me-3 text-white align-items-end h-100 justify-content-end"
           >
             <div>
               <h6 class="fw-bold">A Long Snaking Filament on the Sun</h6>
@@ -102,16 +88,41 @@
     </div>
   </div>
   <div class="row g-2 mt-1">
-    <div class="col-12 col-md-4">
-      <div class="card bg-gray-custom ">
-        <div class="card-body shadow-5 d-flex flex-row">
-          <img src="/assets/images/mars.png" style="height: 20vh;"/>
-          <span class="text-center  w-100">
-           <h4>Explore images taken by</h4>
-           <h3>MARS ROVER</h3>
+    <div class="col-12 col-lg-4">
+      <div class="card bg-gray-custom">
+        <div
+          class="card-body shadow-5 d-flex flex-row align-items-center justify-content-center"
+        >
+          <img src="/assets/images/mars.png" style="height: 20vh" />
+          <span
+            class="d-flex flex-column align-items-center justify-content-center ms-4"
+          >
+            Explore images of
+            <h4 class="fw-bold">RED PLANET</h4>
+            <a class="stretched-link" href="#"
+              ><i class="fas fa-chevron-circle-right"></i
+            ></a>
           </span>
         </div>
-      </div>     
-    </div>    
+      </div>
+    </div>
+    <div class="col-12 col-lg-8">
+      <div class="card bg-gray-custom">
+        <div
+          class="card-body shadow-5 d-flex flex-row align-items-center justify-content-center"
+        >
+          <img src="/assets/images/mars.png" style="height: 20vh" />
+          <span
+            class="d-flex flex-column align-items-center justify-content-center ms-4"
+          >
+            Explore images of
+            <h4 class="fw-bold">RED PLANET</h4>
+            <a class="stretched-link" href="#"
+              ><i class="fas fa-chevron-circle-right"></i
+            ></a>
+          </span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
