--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,15 @@
           "
         >
           <div
-            class="bottom-0 text-white me-3 d-flex align-items-end h-100 justify-content-end"
+            class="
+              bottom-0
+              text-white
+              me-3
+              d-flex
+              align-items-end
+              h-100
+              justify-content-end
+            "
           >
             <div class="text-end">
               <p class="badge bg-danger">To Be Confirmed (TBC)</p>
@@ -77,7 +85,15 @@
           "
         >
           <div
-            class="bottom-0 d-flex me-3 text-white align-items-end h-100 justify-content-end"
+            class="
+              bottom-0
+              d-flex
+              me-3
+              text-white
+              align-items-end
+              h-100
+              justify-content-end
+            "
           >
             <div>
               <h6 class="fw-bold">A Long Snaking Filament on the Sun</h6>
@@ -91,11 +107,24 @@
     <div class="col-12 col-lg-4">
       <div class="card bg-gray-custom">
         <div
-          class="card-body shadow-5 d-flex flex-row align-items-center justify-content-center"
+          class="
+            card-body
+            shadow-5
+            d-flex
+            flex-row
+            align-items-center
+            justify-content-center
+          "
         >
           <img src="/assets/images/mars.png" style="height: 20vh" />
           <span
-            class="d-flex flex-column align-items-center justify-content-center ms-4"
+            class="
+              d-flex
+              flex-column
+              align-items-center
+              justify-content-center
+              ms-4
+            "
           >
             Explore images of
             <h4 class="fw-bold">RED PLANET</h4>
@@ -108,19 +137,40 @@
     </div>
     <div class="col-12 col-lg-8">
       <div class="card bg-gray-custom">
-        <div
-          class="card-body shadow-5 d-flex flex-row align-items-center justify-content-center"
-        >
-          <img src="/assets/images/mars.png" style="height: 20vh" />
-          <span
-            class="d-flex flex-column align-items-center justify-content-center ms-4"
-          >
-            Explore images of
-            <h4 class="fw-bold">RED PLANET</h4>
-            <a class="stretched-link" href="#"
-              ><i class="fas fa-chevron-circle-right"></i
-            ></a>
-          </span>
+        <div class="card-body shadow-5">
+          <div class="row">
+            <div
+              class="
+                col-12 col-lg-2
+                d-flex
+                flex-column
+                align-items-center
+                justify-content-center
+              "
+            >
+              Today in
+              <h4 class="fw-bold">History</h4>
+            </div>
+            <div class="col-12 col-lg-5 d-flex flex-row">
+              <img
+                class="rounded"
+                [src]="astronaut"
+                style="height: 20vh; object-fit: contain"
+              />
+              <section class="mx-2">
+                <p class="fw-bold">BIRTHDAY</p>
+                <p>Abdul Ahad Mohmand</p>
+                1972-07-27
+              </section>
+            </div>
+            <div class="col-12 col-lg-5">
+              <img
+                class="rounded"
+                [src]="dummyLaunchImg"
+                style="height: 20vh; object-fit: contain"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
