--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <app-header></app-header>
+<app-info-header></app-info-header>
 
-<div class="container" style="margin-top: 65px">
+<div class="container" style="margin-top: 7px">
   <div class="row g-3">
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <div class="row">
         <div class="col-12">
-          <h6 class="float-start">
+          <h4 class="float-start">
             <i class="far fa-dot-circle"></i> &nbsp;Upcoming Launch
-          </h6>
-          <a href="#" class="float-end"
+          </h4>
+          <a href="#" class="float-end fs-4"
             ><i class="fas fa-chevron-circle-right"></i
           ></a>
         </div>
@@ -43,11 +44,11 @@
             "
           >
             <div class="text-end">
-              <p class="badge bg-danger">To Be Confirmed (TBC)</p>
-              <p class="h6 fw-bold">
+              <p class="badge bg-danger m-0">To Be Confirmed (TBC)</p>
+              <p class="fs-5 fw-bold m-0">
                 Falcon 9 Block 5 | Starlink Group 4-2 & BlueWalker 3
               </p>
-              <p>
+              <p class="fs-5">
                 <i class="fas fa-calendar-day"></i> &nbsp; Sep 11 2022, 06:40:00
               </p>
             </div>
@@ -55,13 +56,13 @@
         </div>
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <div class="row">
         <div class="col-12">
-          <h6 class="float-start">
+          <h4 class="float-start">
             <i class="fas fa-image"></i> &nbsp;Picture of the day
-          </h6>
-          <a href="#" class="float-end"
+          </h4>
+          <a href="#" class="float-end fs-4"
             ><i class="fas fa-chevron-circle-right"></i
           ></a>
         </div>
@@ -96,7 +97,9 @@
             "
           >
             <div>
-              <h6 class="fw-bold">A Long Snaking Filament on the Sun</h6>
+              <p class="fs-5 fw-bold">
+                A Long Snaking Filament on the Sun
+              </p>
             </div>
           </div>
         </div>
@@ -104,7 +107,7 @@
     </div>
   </div>
   <div class="row g-2 mt-1">
-    <div class="col-12 col-lg-4">
+    <div class="col-12 col-lg-5">
       <div class="card bg-gray-custom">
         <div
           class="
@@ -136,43 +139,7 @@
       </div>
     </div>
     <div class="col-12 col-lg-8">
-      <div class="card bg-gray-custom">
-        <div class="card-body shadow-5">
-          <div class="row">
-            <div
-              class="
-                col-12 col-lg-2
-                d-flex
-                flex-column
-                align-items-center
-                justify-content-center
-              "
-            >
-              Today in
-              <h4 class="fw-bold">History</h4>
-            </div>
-            <div class="col-12 col-lg-5 d-flex flex-row">
-              <img
-                class="rounded"
-                [src]="astronaut"
-                style="height: 20vh; object-fit: contain"
-              />
-              <section class="mx-2">
-                <p class="fw-bold">BIRTHDAY</p>
-                <p>Abdul Ahad Mohmand</p>
-                1972-07-27
-              </section>
-            </div>
-            <div class="col-12 col-lg-5">
-              <img
-                class="rounded"
-                [src]="dummyLaunchImg"
-                style="height: 20vh; object-fit: contain"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
+
     </div>
   </div>
 </div>
