--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark shadow-5">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-5">
   <!-- Container wrapper -->
-  <div class="container-fluid ">
+  <div class="container ">
     <!-- Navbar brand -->
     <a class="navbar-brand d-none d-lg-block website-font-name blue-color-600" href="#">ALL ABOUT SPACE</a>
     <a class="navbar-brand d-lg-none website-font-name blue-color-600" href="#">AAS</a>
@@ -42,7 +42,7 @@
           >
         </li>
       </ul>
-      <!-- Left links -->            
+      <!-- Left links -->
     </div>
     <!-- Collapsible wrapper -->
   </div>
