Adjusting Header for upcoming and picture of day

--- a/src/app/info-header/info-header.component.html
+++ b/src/app/info-header/info-header.component.html
@@ -2,7 +2,7 @@
   <div class="col my-2">
     <div class="container d-flex flex-row">
       <a href="#" class="custom-anchor-hover-style">
-        <span class="border border-warning px-2 py-1 rounded">
+        <span class="border border-warning px-2 py-1 ms-3 rounded">
           Today in History :&nbsp; 2 launches &nbsp; 2 birthdays &nbsp;
           <i class="fas fa-arrow-right"></i
         ></span>
