NASA APOD - Pic of the day

--- a/src/app/layout/components/info-header/info-header.component.html
+++ b/src/app/layout/components/info-header/info-header.component.html
@@ -1,11 +1,14 @@
 <div class="row bg-dark shadow-5 g-0">
-  <div class="col my-2">
+  <div class="col my-2 ms-3">
     <div class="container d-flex flex-row">
-      <a href="#" class="custom-anchor-hover-style">
+      <!-- <a href="#" class="custom-link-hover">
         <span class="border border-warning px-2 py-1 ms-3 rounded">
           Today in History :&nbsp; 2 launches &nbsp; 2 birthdays &nbsp;
           <i class="fas fa-arrow-right"></i
         ></span>
+      </a> -->
+      <a class="custom-link-hover" href="#">
+          Today In History &nbsp; <i class="fas fa-history"></i>
       </a>
     </div>
   </div>
