--- a/src/app/layout/components/nav/nav.component.html
+++ b/src/app/layout/components/nav/nav.component.html
@@ -3,8 +3,8 @@
   <!-- Container wrapper -->
   <div class="container ">
     <!-- Navbar brand -->
-    <a class="navbar-brand d-none d-lg-block website-font-name blue-color-600" href="#">ALL ABOUT SPACE</a>
-    <a class="navbar-brand d-lg-none website-font-name blue-color-600" href="#">AAS</a>
+    <a class="navbar-brand d-none d-lg-block website-font-name blue-color-600" routerLink="/">ALL ABOUT SPACE</a>
+    <a class="navbar-brand d-lg-none website-font-name blue-color-600" routerLink="/">AAS</a>
 
     <!-- Toggle button -->
     <button
@@ -27,7 +27,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" routerLink="/" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
