--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,8 @@
 
 @import "~mdb-angular-ui-kit/assets/scss/mdb.scss";
 
+
+
 // This fontface is mainly used for Website Name
 @font-face {
   font-family: "Salvar";
@@ -30,7 +32,20 @@ a {
 .txt-marsColor-custom{
   color: #c1440e;
 }
-
+a.custom-link-hover {
+  text-decoration: none;
+  color: white !important;
+}
+a.custom-link-hover:hover {
+  color: yellow !important;
+}
+.has-dropcap:first-letter {
+  font-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
+  float: left;
+  font-size: 4.5rem;
+  line-height: 0.65;
+  margin: 0.1em 0.1em 0.2em 0;
+}
 // .blue-color-600 {
 //  color: #1E88E5 !important;
 // }
