Initial - Launches Module
Initial - Launches Module

--- a/src/app/features/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/components/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
           <h5 class="float-start">
             <i class="far fa-dot-circle"></i> &nbsp;Upcoming Launch
           </h5>
-          <a href="#" class="float-end fs-5 custom-link-hover"
+          <a [routerLink]='["/launches","upcoming"]' class="float-end fs-5 custom-link-hover"
             ><i class="fas fa-arrow-right"></i></a>
         </div>
       </div>
